# WikiDataParser

./: .gitignore  README.md  requirements.txt  run_redis.sh  setup.cfg  stop_redis.sh
src/austin_heller_repo/: wiki_data_parser.py
test/: break_early_test.py  iterate_first_then_loop_test.py  read_all_test.py  read_from_bz_file_test.py
