[metadata]
name = wiki-data-parser-austinhellerrepo
version = 0.0.1
author = Austin Heller
description = A package that contains a framework for parsing data from the WikiData knowledge graph
url = https://github.com/AustinHellerRepo/WikiDataParser
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common

[options.packages.find]
where = src
